kube/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: test-ops
spec:
  ports:
    - port: 5432
  selector:
    app: test-ops
    tier: postgres
