kube/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails
  labels:
    app: rails-kube-app
spec:
  ports:
    - port: 3000
  selector:
    app: rails-kube-app
    tier: rails
